DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
2001-12-09 patrickh Disallowed the overriding of the VPR "domain" (the thing
                    that defines what sockets, threads, etc. to use) by user
                    code.
2001-12-07 allenb   GUID now has a constructor that can use a dispatch tag
                    to specify that it should generate a new id an init time.
2001-12-05 allenb   GUID's default constructor now initialized it to NullGUID.
2001-11-21 allenb   Modified StatCollector to allow for time based and discrete
                    stat collection.
2001-11-20 allenb   Created standards StatCollector class for collecting
                    IO statistics.  Replaced the old BandwidthIOStats
                    collection method with the new collector class.
2001-11-15 allenb   Added valid() test function to thread functors.  The code
                    now tries to test for valid functors at thread creation.
                    Also added destructor that sets the internal values to ones
                    that can be easily detected by isValid().
2001-11-13 allenb   Changed the debug GUID category registrators to allow only
                    one registration of the GUIDs.  This means that the 
                    registration macro should only be used from .cpp files now
2001-10-12 allenb   Updated vapor debug to use GUIDs for category identifiers.
                    This allows other systems to extend the categories.
2001-09-23 patrick  Updated test suite to use CppUnit 1.6.0.
2001-09-12 alleb    Added wait interval to the cond var abstractions.
           patrick
2001-09-04 kevn     vpr::ReturnStatus::Success renamed to
                    vpr::ReturnStatus::Succeed; vpr::ReturnStatus::Failure
                    renamed to vpr::ReturnStatus::Fail.
2001-08-06 allenb   Test case for vpr::System added.
2001-08-06 allenb   Introduced Htonll and Ntohll.